--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,3 +5,6 @@ api-version: '1.21'
 load: STARTUP
 authors: [ ImRama ]
 description: Rankup system for Minecraft servers.
+commands:
+  rankup:
+  rankdown:
